/* Copyright 2025 AI Edge Eliza

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
==============================================================================*/

syntax = "proto3";

package com.example.ai.edge.eliza.proto;

option java_package = "com.example.ai.edge.eliza.proto";
option java_multiple_files = true;

enum Theme {
  THEME_UNSPECIFIED = 0;

  // Force to use light theme.
  THEME_LIGHT = 1;

  // Force to use dark theme.
  THEME_DARK = 2;

  // Use the system them setting on user's phone.
  THEME_AUTO = 3;
}

message AccessTokenData {
  string access_token = 1;
  string refresh_token = 2;
  int64 expires_at_ms = 3;
}

message ImportedModel {
  string file_name = 1;
  int64 file_size = 2;

  oneof config {
    LlmConfig llm_config = 3;
  }
}

message LlmConfig {
  repeated string compatible_accelerators = 1;
  int32 default_max_tokens = 2;
  int32 default_topk = 3;
  float default_topp = 4;
  float default_temperature = 5;
  bool support_image = 6;
  bool support_audio = 7;
}

message UserLearningPreferences {
  string experience_level = 1; // "beginner", "intermediate", "advanced"
  repeated string preferred_subjects = 2; // e.g., ["mathematics", "physics"]
  int32 available_time_hours = 3; // Hours per week available for study
  repeated string learning_goals = 4; // User-defined learning objectives
  string preferred_difficulty = 5; // "easy", "moderate", "challenging"
  string study_schedule = 6; // "morning", "afternoon", "evening", "flexible"
  bool is_first_time = 7; // Whether user has set preferences before
  int64 last_updated = 8; // When preferences were last modified (timestamp)
  string language = 9; // "albanian", "german", "english" - app language preference
}

message ElizaSettings {
  Theme theme = 1;
  AccessTokenData access_token_data = 2;
  repeated string text_input_history = 3;
  repeated ImportedModel imported_model = 4;
  UserLearningPreferences user_learning_preferences = 5;
}